...

    <Button
            android:id="@+id/cryptogram_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
...

        <Button
            android:id="@+id/cryptogram_button_submit"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
...
            android:layout_marginStart="8dp"
            android:layout_marginTop="49dp"
            android:text="SOLVED"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
...

            <EditText
                android:id="@+id/cryptogram_textinput_A"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_B"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_C"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_D"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_E"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_F"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_G"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_H"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_I"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_J"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_K"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_L"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_M"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_N"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_O"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_P"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_Q"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_R"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_S"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_T"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_U"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_V"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_W"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_X"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_Y"
                android:layout_width="25dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/cryptogram_textinput_Z"
                android:layout_width="25dp"
                android:layout_height="35dp"
...
